--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,14 @@
     justify-content: center;
     height: 100vh;
     background-color: var(--background-color);
+    align-items: center;
     padding-top: 96px;
+  }
+
+  .home-body {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
   
   .greeting{
@@ -16,6 +23,20 @@
   
   .name{
     color: var(--accent);
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  @media screen and (max-width: 704px) and (max-height: 842px){
+    .Home {
+      height: auto;
+    }
+
+    .greeting {
+      padding-bottom: 50px;
+    }
   }
 
   
