--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,19 +6,28 @@
     height: 100vh;
     background-color: var(--background-color);
     align-items: center;
-    padding-top: 96px;
   }
 
   .home-body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+  }
+
+  .home-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .greeting{
-    padding-bottom: 250px;
     font-size: 60px;
-    
+  }
+
+  .home-desc{
+    margin-top: 0;
+    padding-bottom: 20px;
   }
   
   .name{
@@ -27,6 +36,36 @@
 
   img {
     max-width: 100%;
+  }
+
+  .projects-button {
+    border: 2px solid var(--accent);
+    border-radius: 20px; 
+    padding: 15px 30px; 
+    background-color: white;
+    color: var(--main-text); 
+    font-family: Comfortaa;
+    font-weight: 700;
+    cursor: pointer; 
+    overflow: hidden;
+  }
+  
+  .projects-button:hover {
+    background-color: var(--accent); 
+  }
+
+  .projects-button svg {
+    padding-left: 10px;
+    animation: bounceDownUp 2s linear infinite;
+  }
+
+  @keyframes bounceDownUp {
+    0%, 100% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(5px); 
+    }
   }
 
   @media screen and (max-width: 704px) and (max-height: 842px){
