--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -8,11 +8,6 @@
     box-sizing: border-box;
   }
 
-.card-heading {
-    text-align: center;
-    padding: 4rem 0 2rem 0;
-}
-
 .project-container {
     max-width: 1140px;
     display:flex;
@@ -23,14 +18,24 @@
 }
 
 .project-card{
-    background: var(--accent);
-    padding: 1.2rem 1rem;
+    background: #fff;
+    padding: 0.8rem 1rem;
+    margin-top: 20px;
     max-width: 400px;
-    
+    height: 500px;
+    width: 100%;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+    transform: translateY(-5px); 
 }
 
 .project-card img {
     width: 100%;
+    height: auto;
 }
 
 .project-title {
@@ -44,17 +49,58 @@
     text-align: justify;
 }
 
+.detail-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(119, 123, 128, 0.7); 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    border-radius: 30px;
+  }
+  
+  .project-card:hover .detail-container {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .detail-container h2,
+  .detail-container .pro-btns {
+    color: #fff;
+  }
+
 .pro-btns {
     display: flex;
-    justify-content: space-between;
-    padding: 0.5rem 0;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem 0;
+}
+
+.source-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--accent); 
+    border-radius: 50%; 
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    background-color: var(--accent);
+    color: #fff;
 }
 
 .card-btn {
-    display: black;
+    display: block;
     width: 80%;
     margin: 2rem auto;
-    background-color: var(--main-text);
+    background-color: var(--accent);
+    border-radius: 15px;
 }
 
 .pro-btns .card-btn {
