--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -39,11 +39,14 @@
 }
 
 .project-title {
+    margin: 20px;
+    margin-top: 30px;
     color: var(--main-text);
     padding: 1rem 0;
 }
 
 .pro-details p {
+    margin: 20px;
     padding-bottom: 1rem;
     font-size: 1.1rem;
     text-align: justify;
@@ -84,15 +87,23 @@
 }
 
 .source-btn{
+    margin: 20px;
+    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid var(--accent); 
+    border: 2px solid black; 
     border-radius: 50%; 
     padding: 0.5rem 1rem;
     text-decoration: none;
-    background-color: var(--accent);
+    background-color: black;
     color: #fff;
+    transition: transform 0.3s ease, font-size 0.3s ease;
+}
+
+.source-btn:hover{
+    transform: scale(0.95);
+    font-size: 28px;
 }
 
 .card-btn {
