--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -28,6 +28,7 @@
   .home-desc{
     margin-top: 0;
     padding-bottom: 20px;
+    font-size: 30px;
   }
   
   .name{
@@ -46,12 +47,16 @@
     color: var(--main-text); 
     font-family: Comfortaa;
     font-weight: 700;
+    font-size: 25px;
     cursor: pointer; 
     overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
   }
   
   .projects-button:hover {
     background-color: var(--accent); 
+    transform: translateY(-5px); 
   }
 
   .projects-button svg {
